--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button
           class="navbar-toggler"
           data-toggle="collapse"
-          data-target="navbarCollapse"
+          data-target="#navbarCollapse"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -53,6 +53,68 @@
         </div>
       </div>
     </nav>
+
+    <!-- showcase slider -->
+    <section id="showcase">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item carousel-image-1 active">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block text-right mb-5">
+                <h1 class="display-3">Heading One</h1>
+                <p class="lead">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut
+                  suscipit eum illo corporis, libero numquam officia
+                  exercitationem adipisci officiis enim.
+                </p>
+                <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-2">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block mb-5">
+                <h1 class="display-3">Heading Two</h1>
+                <p class="lead">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut
+                  suscipit eum illo corporis, libero numquam officia
+                  exercitationem adipisci officiis enim.
+                </p>
+                <a href="#" class="btn btn-primary btn-lg">Learn More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item carousel-image-3">
+            <div class="container">
+              <div class="carousel-caption d-none d-sm-block text-right mb-5">
+                <h1 class="display-3">Heading Three</h1>
+                <p class="lead">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut
+                  suscipit eum illo corporis, libero numquam officia
+                  exercitationem adipisci officiis enim.
+                </p>
+                <a href="#" class="btn btn-success btn-lg">Learn More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- carousel controls -->
+        <a href="#myCarousel" data-slide="prev" class="carousel-control-prev">
+          <span class="carousel-control-prev-icon"></span>
+        </a>
+
+        <a href="#myCarousel" data-slide="next" class="carousel-control-next">
+          <span class="carousel-control-next-icon"></span>
+        </a>
+      </div>
+    </section>
 
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
