--- a/index.html
+++ b/index.html
@@ -116,6 +116,38 @@
       </div>
     </section>
 
+    <!-- home icons -->
+    <section id="home-icons" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-clg fa-3x mb-2"></i>
+            <h3>Turning Gears</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
+              illum?
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cloud fa-3x mb-2"></i>
+            <h3>Sending Data</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
+              illum?
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cart-plus fa-3x mb-2"></i>
+            <h3>Making Money</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam,
+              illum?
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -135,6 +167,12 @@
     <script>
       // Get the current year for the copyright
       $('#year').text(new Date().getFullYear());
+
+      // configure slider
+      $('.carousel').carousel({
+        interval: 6000,
+        pause: 'hover',
+      });
     </script>
   </body>
 </html>
