--- a/index.html
+++ b/index.html
@@ -166,6 +166,28 @@
       </div>
     </section>
 
+    <!-- info -->
+    <section id="info" class="py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 align-self-center">
+            <h3>Lorem Ipsum</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit
+              laborum, consectetur ex blanditiis ea fugiat voluptatem id!
+              Aperiam, eveniet expedita.
+            </p>
+            <a href="about.html" class="btn btn-outline-danger btn-lg"
+              >Learn More</a
+            >
+          </div>
+          <div class="col-md-6">
+            <img src="./img/laptop.png" alt="" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
