--- a/index.html
+++ b/index.html
@@ -352,6 +352,17 @@
       </div>
     </section>
 
+    <!-- footer -->
+    <footer id="main-footer" class="text-center p-4">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p>Copyright &copy; <span id="year"></span> Glozzom</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- video modal -->
     <div class="modal fade" id="videoModal">
       <div class="modal-dialog">
