adds page header and about sections

--- a/about.html
+++ b/about.html
@@ -66,6 +66,55 @@
       </div>
     </nav>
 
+    <!-- page header -->
+    <header id="page-header">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 m-auto text-center">
+            <h1>About Us</h1>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Repellat, sapiente.
+            </p>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- about -->
+    <section id="about" class="py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h1>What We Do</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
+              praesentium? Atque eligendi ab saepe at et, mollitia hic id
+              suscipit beatae aperiam reiciendis cupiditate, error quam eveniet.
+              Soluta deserunt possimus dolorum ipsa debitis. Dolorem obcaecati
+              nostrum inventore quas beatae recusandae aliquam, dolorum illo
+              distinctio qui corrupti consectetur ullam perspiciatis animi.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed,
+              praesentium? Atque eligendi ab saepe at et, mollitia hic id
+              suscipit beatae aperiam reiciendis cupiditate, error quam eveniet.
+              Soluta deserunt possimus dolorum ipsa debitis. Dolorem obcaecati
+              nostrum inventore quas beatae recusandae aliquam, dolorum illo
+              distinctio qui corrupti consectetur ullam perspiciatis animi.
+            </p>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="https://source.unsplash.com/random/700x700?technology"
+              alt=""
+              class="img-fluid rounded-circle d-none d-md-block about-img"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
