--- a/about.html
+++ b/about.html
@@ -115,6 +115,77 @@
       </div>
     </section>
 
+    <!-- icon boxes -->
+    <section id="icon-boxes" class="p-5">
+      <div class="container">
+        <div class="row mb-4">
+          <div class="col-md-4">
+            <div class="card bg-danger text-white text-center">
+              <div class="card-body">
+                <i class="fas fa-building fa-3x"></i>
+                <h3>Builds Stuff</h3>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Doloribus, quia.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-dark text-white text-center">
+              <div class="card-body">
+                <i class="fas fa-bullhorn fa-3x"></i>
+                <h3>Megaphones Out</h3>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Doloribus, quia.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-danger text-white text-center">
+              <div class="card-body">
+                <i class="fas fa-comments fa-3x"></i>
+                <h3>Mass Messages</h3>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Doloribus, quia.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mb-4">
+          <div class="col-md-4">
+            <div class="card bg-dark text-white text-center">
+              <div class="card-body">
+                <i class="fas fa-box fa-3x"></i>
+                <h3>Boxing Boxes</h3>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Doloribus, quia.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-danger text-white text-center">
+              <div class="card-body">
+                <i class="fas fa-credit-card fa-3x"></i>
+                <h3>Fair Prices</h3>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Doloribus, quia.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-dark text-white text-center">
+              <div class="card-body">
+                <i class="fas fa-coffee fa-3x"></i>
+                <h3>Takes a Break</h3>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Doloribus, quia.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
