--- a/about.html
+++ b/about.html
@@ -186,6 +186,70 @@
       </div>
     </section>
 
+    <!-- testimonials -->
+    <section id="testimonials" class="p-4 bg-dark text-white">
+      <div class="container">
+        <h2 class="text-center">Testimonials</h2>
+        <div class="row text-center">
+          <div class="col">
+            <div class="slider">
+              <div>
+                <blockquote class="blockquote">
+                  <div class="mb-0">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Natus, eius?
+                    </p>
+                    <footer class="blockquote-footer">John Doolite From</footer>
+                    <cite title="Company 1">Ericsson</cite>
+                  </div>
+                </blockquote>
+              </div>
+
+              <div>
+                <blockquote class="blockquote">
+                  <div class="mb-0">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Natus, eius?
+                    </p>
+                    <footer class="blockquote-footer">Sam Smith From</footer>
+                    <cite title="Company 1">Apple Inc</cite>
+                  </div>
+                </blockquote>
+              </div>
+
+              <div>
+                <blockquote class="blockquote">
+                  <div class="mb-0">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Natus, eius?
+                    </p>
+                    <footer class="blockquote-footer">
+                      Leon Williams From
+                    </footer>
+                    <cite title="Company 1">Azelio</cite>
+                  </div>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <footer id="main-footer" class="text-center p-4">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <p>Copyright &copy; <span id="year"></span> Glozzom</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -210,6 +274,12 @@
     <script>
       // Get the current year for the copyright
       $('#year').text(new Date().getFullYear());
+
+      $('.slider').slick({
+        infinite: true,
+        slideToShow: 1,
+        slideToScroll: 1,
+      });
     </script>
   </body>
 </html>
