adds blog section markup and styling

--- a/blog.html
+++ b/blog.html
@@ -70,6 +70,121 @@
       </div>
     </header>
 
+    <!-- blog -->
+    <section id="blog" class="py-3">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card-columns">
+              <div class="card">
+                <img
+                  src="https://source.unsplash.com/random/300x200"
+                  alt=""
+                  class="img-fluid card-img-top"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Blog Post One</h4>
+                  <small class="text-muted">Written By Jeff, July 2020</small>
+                  <hr />
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Error inventore voluptatum voluptas expedita veniam unde
+                    deleniti sequi, quia doloremque, deserunt blanditiis soluta
+                    ratione ipsam consequuntur illum impedit. Harum, ut quae?
+                  </p>
+                </div>
+              </div>
+              <div class="card p-3">
+                <blockquote class="card-blockquote card-body">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Repellendus illum dignissimos omnis velit quaerat
+                    necessitatibus.
+                  </p>
+                  <footer class="blockquote-footer">
+                    <small class="text-muted"
+                      >Someone Famous in
+                      <cite title="Source Title">Source Title</cite></small
+                    >
+                  </footer>
+                </blockquote>
+              </div>
+
+              <div class="card">
+                <img
+                  src="https://source.unsplash.com/random/301x200"
+                  alt=""
+                  class="img-fluid card-img-top"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Blog Post Two</h4>
+                  <small class="text-muted">Written By Karen, June 2020</small>
+                  <hr />
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Error inventore voluptatum voluptas expedita veniam unde
+                    deleniti sequi, quia doloremque, deserunt blanditiis soluta
+                    ratione ipsam consequuntur illum impedit. Harum, ut quae?
+                  </p>
+                </div>
+              </div>
+              <div class="card p-3 bg-danger text-white">
+                <blockquote class="card-blockquote card-body">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Repellendus illum dignissimos omnis velit quaerat
+                    necessitatibus.
+                  </p>
+                  <footer class="blockquote-footer">
+                    <small class="text-white"
+                      >Someone Famous in
+                      <cite title="Source Title">Source Title</cite></small
+                    >
+                  </footer>
+                </blockquote>
+              </div>
+
+              <div class="card">
+                <img
+                  src="https://source.unsplash.com/random/300x201"
+                  alt=""
+                  class="img-fluid card-img-top"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Blog Post Three</h4>
+                  <small class="text-muted"
+                    >Written By Albert, August 2020</small
+                  >
+                  <hr />
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Error inventore voluptatum voluptas expedita veniam unde
+                    deleniti sequi, quia doloremque, deserunt blanditiis soluta
+                    ratione ipsam consequuntur illum impedit. Harum, ut quae?
+                  </p>
+                </div>
+              </div>
+              <div class="card p-3">
+                <blockquote class="card-blockquote card-body">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Repellendus illum dignissimos omnis velit quaerat
+                    necessitatibus.
+                  </p>
+                  <footer class="blockquote-footer">
+                    <small class="text-muted"
+                      >Someone Famous in
+                      <cite title="Source Title">Source Title</cite>
+                    </small>
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- footer -->
     <footer id="main-footer" class="text-center p-4">
       <div class="container">
